samples/_failures_safe/1761560554_194b7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f946ec01.c: In function ‘main’:
./samples/SAFE/__tmp_f946ec01.c:161:9: error: expected declaration or statement at end of input
  161 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_f946ec01.c:161:9: error: expected declaration or statement at end of input
